Updating links in `links` page

--- a/links.Rmd
+++ b/links.Rmd
@@ -21,6 +21,8 @@ title: "Links"
 
 ## Db
 
+* [SQL Fiddle](http://sqlfiddle.com/)
+
 ## Learning Resources
 
 * [DataCamp](https://www.datacamp.com/)
